--- a/tools/script-git-version.gradle
+++ b/tools/script-git-version.gradle
@@ -1,17 +1,27 @@
-def getVersionName = { ->
+ext.getVersionNameApp = { ->
     try {
         def stdout = new ByteArrayOutputStream()
         exec {
             commandLine 'git', 'describe', '--dirty'
             standardOutput = stdout
         }
-        return stdout.toString().trim()
+        return stdout.toString().trim() + '-' + getSHA()
     }
     catch (ignored) {
         return null;
     }
 }
-def getVersionCode = { ->
+
+ext.getSHA = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'rev-parse', '--short' , 'HEAD'
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
+}
+
+ext.getVersionCodeApp = { ->
     try {
         def stdout = new ByteArrayOutputStream()
         exec {
