--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".cloth_creator.ClothCreatorActivity">
+        <activity
+            android:name=".cloth_creator.ClothCreatorActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
