--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 apply from: "$project.rootDir/tools/script-git-version.gradle"
 
 android {
@@ -19,11 +20,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 ext {
     dagger = '2.8'
     butterKnife = '8.5.1'
+    glide = '3.7.0'
 }
 
 dependencies {
@@ -32,8 +38,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: "com.google.code.findbugs", module: "jsr305"
     })
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
 
     //dagger
@@ -44,4 +50,7 @@ dependencies {
     //butterKnife
     compile "com.jakewharton:butterknife:$butterKnife"
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnife"
+
+    //glide
+    compile "com.github.bumptech.glide:glide:$glide"
 }
