--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ ext {
     dagger = '2.8'
     butterKnife = '8.5.1'
     glide = '3.7.0'
+    snapHelper = '1.2'
 }
 
 dependencies {
@@ -53,4 +54,7 @@ dependencies {
 
     //glide
     compile "com.github.bumptech.glide:glide:$glide"
+
+    //snapHelper for RecyclerView
+    compile "com.github.rubensousa:gravitysnaphelper:$snapHelper"
 }
