--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,9 @@ android {
 ext {
     dagger = '2.8'
     butterKnife = '8.5.1'
-    glide = '3.7.0'
     snapHelper = '1.2'
+    retrofit = '2.2.0'
+    rxAndroid = '2.0.1'
 }
 
 dependencies {
@@ -53,8 +54,22 @@ dependencies {
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterKnife"
 
     //glide
-    compile "com.github.bumptech.glide:glide:$glide"
+    compile "com.github.bumptech.glide:glide:3.7.0"
 
     //snapHelper for RecyclerView
     compile "com.github.rubensousa:gravitysnaphelper:$snapHelper"
+
+    //retrofit
+    compile "com.squareup.retrofit2:retrofit:$retrofit"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit"
+
+    //converters
+    compile 'com.google.code.gson:gson:2.7'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okio:okio:1.7.0'
+
+    //rxAndroid
+    compile "io.reactivex.rxjava2:rxjava:$rxAndroid"
+    compile "io.reactivex.rxjava2:rxandroid:$rxAndroid"
 }
